--- a/sample-viewer/src/app/sample/sample.component.html
+++ b/sample-viewer/src/app/sample/sample.component.html
@@ -139,8 +139,8 @@
 
           <ng-template #add_sample let-sample="sample">
             <!-- <button mat-icon-button class="add" type="button">
-            <mat-icon aria-label="Add a sample" [matTooltip]="'add ' + sample + ' sample'" matTooltipPosition="right">add</mat-icon> -->
-            </button>
+            <mat-icon aria-label="Add a sample" [matTooltip]="'add ' + sample + ' sample'" matTooltipPosition="right">add</mat-icon>
+          </button> -->
           </ng-template>
         </ng-container>
         <!-- <form class="flex-container">
