--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
@@ -7,8 +7,8 @@
 
 
   <!-- TEMPORARY: JUST FOR ME WHILE TESTING -->
-  <div>
-    <button type="button" mat-raised-button color="warn" (click)="deleteSamples()">Clear sample list</button>
+  <div style="margin-top: 25px;">
+    <button type="button" mat-raised-button color="warn" (click)="deleteSamples()">DON'T PRESS THIS BUTTON -- clears sample list</button>
   </div>
 
 
