--- a/sample-viewer/src/app/sample/sample.component.html
+++ b/sample-viewer/src/app/sample/sample.component.html
@@ -120,12 +120,13 @@
 
 
               <div class="flex-container sample-id">
-                <h4>{{ sample.key }}</h4>
+                <p>{{ sample.key }}</p>
+                <!-- <h4>{{ sample.key }}</h4> -->
               </div>
 
             <!-- Loop over the sample locations -->
               <div *ngFor="let location of sample.values; let i=index" class="sample-locations" (click)="showSampleMD(location)">
-                {{location.lab }}: {{location.numAliquots}}
+                <h4>{{location.lab }}: {{location.numAliquots}}</h4>
                 <!-- <input matInput type="text" name="aliquots" class="edit-aliquots" [disabled]="! editable" [ngClass]="editable ? 'active' : 'inactive'" [value]="numAliquots"> -->
 
                 <!-- <mat-select [(value)]="location" class="location"
