Add in basic filters

--- a/sample-viewer/src/app/sample/sample.component.html
+++ b/sample-viewer/src/app/sample/sample.component.html
@@ -4,7 +4,7 @@
   <app-download-btn [data]="samples" filetype="samples"></app-download-btn>
 </div>
 
-<!-- <app-filter-sample></app-filter-sample> -->
+<app-filter-sample></app-filter-sample>
 
 
 <!-- <form [formGroup]="locationForms" (ngSubmit)="onSubmit()">
