--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -22,9 +22,9 @@
     <app-filter-sample-type></app-filter-sample-type>
   </div>
 
-   <div class="filter-item filter-patients">
+   <!-- <div class="filter-item filter-patients">
     <app-filter-patient-id [all_patients]="all_patients" [patients]="patients" endpoint="sample"></app-filter-patient-id>
-  </div>
+  </div> -->
 
   <!-- <div class="filter-item filter-patient-types">
     <app-filter-patient-type [viruses]="" [outcomes]="" [all_cohorts]="" [all_outcomes]="" endpoint="sample"></app-filter-patient-type>
