--- a/sample-viewer/src/app/sample/sample.component.html
+++ b/sample-viewer/src/app/sample/sample.component.html
@@ -72,7 +72,7 @@
   </ng-container>
 
   <ng-container matColumnDef="privatePatientID">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>private id</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>private patient id</mat-header-cell>
     <mat-cell *matCellDef="let element" class="patient-id"> {{element.privatePatientID}} </mat-cell>
   </ng-container>
 
