fix broken link

--- a/sample-viewer/src/app/add-samples/add-samples.component.html
+++ b/sample-viewer/src/app/add-samples/add-samples.component.html
@@ -3,7 +3,7 @@
   <h1>Add Samples</h1>
 
   <a href="https://www.dropbox.com/s/1qs8w0qqecgdvpw/sample-patient_template_forlaura.xlsx?dl=0" rel="noreferrer" target="_blank">
-      <button mat-button mat-stroked-button class="template-link" (click)="download(data)">download template</button>
+      <button mat-button mat-stroked-button class="template-link">download template</button>
     </a>
 </div>
 
