--- a/sample-viewer/src/app/sample/sample.component.scss
+++ b/sample-viewer/src/app/sample/sample.component.scss
@@ -154,6 +154,10 @@ input.edit-aliquots {
   margin-top: 0 !important;
 }
 
+.sample-location {
+  cursor: pointer;
+}
+
 .location {
   font-size: 1em;
   font-family: $font-default;
