--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -1,5 +1,5 @@
 <div class="patient-lists">
-  <div class="spinner-container" *ngIf="tester.loadingState$ | async">
+  <div class="spinner-container" *ngIf="patientSource.loadingState$ | async">
     <mat-spinner></mat-spinner>
   </div>
 
