--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -14,14 +14,14 @@
     </ng-container>
 
     <ng-container matColumnDef="alternateIdentifier">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">alt. ID</th>
+      <th mat-header-cell *matHeaderCellDef>alt. ID</th>
       <td mat-cell *matCellDef="let element">
         <span class="altID" *ngFor="let id of element.alternateIdentifier">{{ id }}</span>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="associatedSamples">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">timepoints</th>
+      <th mat-header-cell *matHeaderCellDef>timepoints</th>
       <td mat-cell *matCellDef="let element">
         <mat-chip-list>
           <mat-chip class="timepoint" *ngFor="let timepoint of element.associatedSamples" [ngClass]="element.outcome">
@@ -87,7 +87,7 @@
     </ng-container>
 
     <ng-container matColumnDef="availableData">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">available data</th>
+      <th mat-header-cell *matHeaderCellDef>available data</th>
       <td mat-cell *matCellDef="let element">
         <div class="expt-type mat-shadow" *ngFor="let expt of element.availableData" [matTooltip]="expt.name" matTooltipPosition="above" [ngClass]="expt.identifier">
           <a [routerLink]="['/patient', element.patientID]" [fragment]="expt.name | stripWhitespace">
