incorp resolver data (start)

--- a/sample-viewer/src/app/patient/patient.component.html
+++ b/sample-viewer/src/app/patient/patient.component.html
@@ -6,5 +6,5 @@
 
   <app-filter-patients></app-filter-patients>
 
-  <app-patient-table *ngIf="patients"></app-patient-table>
+  <app-patient-table></app-patient-table>
 </ng-container>
