--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -15,9 +15,9 @@
   </div>
 
 
-  <div class="filter-item filter-patients">
+  <!-- <div class="filter-item filter-patients">
     <app-filter-patient-id [all_patients]="all_patients" [patients]="patientSummary.patientIDs" endpoint="patient"></app-filter-patient-id>
-  </div>
+  </div> -->
 
   <!-- <div class="filter-item filter-patient-types">
     <app-filter-patient-type [viruses]="patientSummary.patientTypes" [outcomes]="patientSummary.patientOutcomes" [all_cohorts]="all_cohorts" [all_outcomes]="all_outcomes" endpoint="patient"></app-filter-patient-type>
