fix return of patientIDs

--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -19,7 +19,7 @@
     <app-filter-patient-id [all_patients]="all_patients" [patients]="patientSummary.patientIDs" endpoint="patient"></app-filter-patient-id>
   </div>
 
-  <!-- <div class="filter-item filter-patient-types">
+  <div class="filter-item filter-patient-types">
     <app-filter-patient-type [viruses]="patientSummary.patientTypes" [outcomes]="patientSummary.patientOutcomes" [all_cohorts]="all_cohorts" [all_outcomes]="all_outcomes" endpoint="patient"></app-filter-patient-type>
   </div>
 
@@ -28,14 +28,14 @@
   </div>
 
   <div class="filter-item filter-dates">
-    <app-filter-sample-year [data]="patientSummary.patientYears" [yearDomain]="all_years" endpoint="patient"></app-filter-sample-year>
+    <!-- <app-filter-sample-year [data]="patientSummary.patientYears" [yearDomain]="all_years" endpoint="patient"></app-filter-sample-year> -->
   </div>
 
   <div class="filter-item filter-expts">
-    <app-filter-experiment [expts]="patientSummary.exptTypes"></app-filter-experiment>
+    <!-- <app-filter-experiment [expts]="patientSummary.exptTypes"></app-filter-experiment> -->
   </div>
 
   <div class="filter-item filter-ctry">
-    <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="all_countries"></app-filter-location>
-  </div> -->
+    <!-- <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="all_countries"></app-filter-location> -->
+  </div>
 </div>
