--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="filter-item filter-dates">
-    <!-- <app-filter-sample-year [data]="patientSummary.patientYears" [yearDomain]="all_years" endpoint="patient"></app-filter-sample-year> -->
+    <app-filter-sample-year [data]="patientSummary.patientYears" [yearDomain]="all_years" endpoint="patient"></app-filter-sample-year>
   </div>
 
   <div class="filter-item filter-expts">
@@ -36,6 +36,6 @@
   </div>
 
   <div class="filter-item filter-ctry">
-    <!-- <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="all_countries"></app-filter-location> -->
+    <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="all_countries"></app-filter-location>
   </div>
 </div>
