update css of ids

--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -16,7 +16,7 @@
     <ng-container matColumnDef="alternateIdentifier">
       <th mat-header-cell *matHeaderCellDef>alt. ID</th>
       <td mat-cell *matCellDef="let element">
-        <span class="altID" *ngFor="let id of element.alternateIdentifier">{{ id }}</span>
+        <span class="alt-id" *ngFor="let id of element.alternateIdentifier">{{ id }}</span>
       </td>
     </ng-container>
 
