--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -16,7 +16,9 @@
     <ng-container matColumnDef="alternateIdentifier">
       <th mat-header-cell *matHeaderCellDef>alt. ID</th>
       <td mat-cell *matCellDef="let element">
-        <span class="alt-id" *ngFor="let id of element.alternateIdentifier">{{ id }}</span>
+        <span class="alt-id" *ngFor="let id of element.alternateIdentifier; let idx=index">
+          {{ id }} <span class="data-separator" *ngIf="idx < element.alternateIdentifier.length"></span>
+        </span>
       </td>
     </ng-container>
 
