--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -7,7 +7,7 @@
 
       <div class="patient-header">
         <div class="page-header" [ngClass]="patient.cohort">
-          <h1>Patient {{patientID}}</h1>
+          <h1>Patient {{ patient.alternateIdentifier.sort()[0] }}</h1>
         </div>
 
         <div class="cohort-group">
@@ -20,6 +20,10 @@
         <div class="container-column">
           <div class="updated">
             updated: {{patient.dateModified ? (patient.dateModified | date: 'd MMMM yyyy') : 'unknown'}}
+          </div>
+
+          <div class="altIDs">
+            public ID: <span class="altID variable-value">{{ patientID }}</span>
           </div>
 
           <div class="altIDs" *ngIf="patient.alternateIdentifier">
