--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -27,7 +27,7 @@
           </div>
 
           <div class="altIDs" *ngIf="patient.alternateIdentifier">
-            alternate ID: <span class="altID variable-value" *ngFor="let id of patient.alternateIdentifier">{{ id }}</span>
+            alternate ID: <span class="altID variable-value" *ngFor="let id of patient.alternateIdentifier.sort()">{{ id }}</span>
           </div>
         </div>
 
