--- a/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
@@ -4,7 +4,7 @@
   <div class="container">
     <!-- <input class="patient-ids" /> -->
     <ng-select #selectpatients class="patient-ids"
-            [items]="all_patients"
+            [items]="patients"
             [multiple]="true"
             [closeOnSelect]="true"
             [hideSelected]="true"
