--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -16,8 +16,10 @@
     <ng-container matColumnDef="alternateIdentifier">
       <th mat-header-cell *matHeaderCellDef>alt. ID</th>
       <td mat-cell *matCellDef="let element">
+        <span *ngIf="element.alternateIdentifier">
         <span class="alt-id" *ngFor="let id of element.alternateIdentifier.sort(); let idx=index">
           {{ id }} <span class="data-separator" *ngIf="idx < element.alternateIdentifier.length - 1"></span>
+        </span>
         </span>
       </td>
     </ng-container>
