update download button for backend processing

--- a/sample-viewer/src/app/download-btn/download-btn.component.html
+++ b/sample-viewer/src/app/download-btn/download-btn.component.html
@@ -1,1 +1,1 @@
-<button mat-button mat-stroked-button class="dwnld-btn" (click)="download(data)">download roster</button>
+<button mat-button mat-stroked-button class="dwnld-btn" (click)="download()">download roster</button>
