fix initial vals

--- a/sample-viewer/src/app/dataset-page/hla-page/hla-summary/hla-summary.component.html
+++ b/sample-viewer/src/app/dataset-page/hla-page/hla-summary/hla-summary.component.html
@@ -8,7 +8,7 @@
    <div class="annot--patients">patients sequenced:</div>
  </span>
 
-      <app-filter-patient-type [viruses]="patientTypes" [outcomes]="patientOutcomes" all_outcomes="" all_cohorts="" endpoint="none" class="summary-item"></app-filter-patient-type>
+      <app-filter-patient-type [viruses]="patientTypes" [outcomes]="patientOutcomes" [all_outcomes]="[]" [all_cohorts]="[]" endpoint="none" class="summary-item"></app-filter-patient-type>
     </div>
 
   </div>
