temp remove filter bar

--- a/sample-viewer/src/app/dataset/dataset.component.html
+++ b/sample-viewer/src/app/dataset/dataset.component.html
@@ -6,7 +6,7 @@
       <h1>Data Files</h1>
     </div>
 
-    <app-filter-files [datasets]="datasets"></app-filter-files>
+    <!-- <app-filter-files [datasets]="datasets"></app-filter-files> -->
   </div>
 
   <div class="grid-container">
