clean up HLA routing

--- a/sample-viewer/src/app/dataset-page/hla-page/hla-summary/hla-summary.component.html
+++ b/sample-viewer/src/app/dataset-page/hla-page/hla-summary/hla-summary.component.html
@@ -1,5 +1,5 @@
 <!-- <h3 id="summary">Data summary</h3> -->
-<div class="container hla-summary-container" *ngIf="clientSide">
+<div class="container hla-summary-container">
 
   <div class="container left-container">
     <div class="patient-count-container">
