fix css conflict

--- a/sample-viewer/src/app/dataset-page/hla-page/allele-circle-packing/allele-circle-packing.component.scss
+++ b/sample-viewer/src/app/dataset-page/hla-page/allele-circle-packing/allele-circle-packing.component.scss
@@ -34,7 +34,7 @@
   fill-opacity: 1 !important;
 }
 
-div.tooltip {
+div.circlepacking-tooltip {
   position: absolute;
   text-align: center;
   width: 110px;
