update home content

--- a/sample-viewer/src/app/home/home.component.html
+++ b/sample-viewer/src/app/home/home.component.html
@@ -32,9 +32,9 @@
     </div>
   </section>
 
-  <section>
+  <!-- <section>
       <a routerLink="/about" class="link"> Learn more about CViSB data</a>
-  </section>
+  </section> -->
 
 
 </div>
