--- a/sample-viewer/src/app/add-patients/add-patients/add-patients.component.html
+++ b/sample-viewer/src/app/add-patients/add-patients/add-patients.component.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 <div class="page-header">
-  <h1>Add Patients</h1>
+  <h1>Upload Patients</h1>
 </div>
 
 <div class="upload-file">
