--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.scss
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.scss
@@ -3,11 +3,19 @@
 .error-label {
   font-weight: 400;
 }
-
 /* • separator */
 .id-separator:after {
   content: "\2022";
   color: #959faa;
   padding-left: 3px;
   padding-right: 3px;
+}
+
+.upload-button button {
+  font-size: 1.5em;
+  line-height: 2em;
+}
+
+.file-name {
+  font-weight: 400;
 }
