--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="container patient-ids">
-        <div class="container-column">
+        <div class="container-column column-left">
           <div class="updated">
             updated: {{patient.dateModified ? (patient.dateModified | date: 'd MMMM yyyy') : 'unknown'}}
           </div>
@@ -27,8 +27,15 @@
           </div>
 
           <div class="altIDs" *ngIf="patient.alternateIdentifier">
-            alternate ID: <span class="altID variable-value" *ngFor="let id of patient.alternateIdentifier.sort()">{{ id }}</span>
+            all IDs:
+            <span class="altID variable-value" *ngFor="let id of patient.alternateIdentifier.sort()">
+              {{ id }}
+            </span>
           </div>
+        </div>
+
+        <div class="container-column column-right">
+          <app-patient-dates [patient]="patient"></app-patient-dates>
         </div>
 
       </div>
