--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -13,13 +13,23 @@
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="alternateIdentifier">
-      <th mat-header-cell *matHeaderCellDef>alt. ID</th>
+    <ng-container matColumnDef="gID">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">gID</th>
       <td mat-cell *matCellDef="let element">
-        <span *ngIf="element.alternateIdentifier">
-        <span class="alt-id" *ngFor="let id of element.alternateIdentifier.sort(); let idx=index">
-          {{ id }} <span class="data-separator" *ngIf="idx < element.alternateIdentifier.length - 1"></span>
+        <span *ngIf="element.gID">
+        <span class="alt-id" *ngFor="let id of element.gID.sort(); let idx=index">
+          {{ id }} <span class="data-separator" *ngIf="idx < element.gID.length - 1"></span>
         </span>
+        </span>
+      </td>
+    </ng-container>
+
+
+    <ng-container matColumnDef="sID">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">sID</th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="element.sID">
+          {{ element.sID }}
         </span>
       </td>
     </ng-container>
