--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -7,7 +7,8 @@
 
       <div class="patient-header">
         <div class="page-header" [ngClass]="patient.cohort">
-          <h1>Patient {{ patient.alternateIdentifier.sort()[0] }}</h1>
+          <h1 *ngIf="patient.alternateIdentifier">Patient {{ patient.alternateIdentifier.sort()[0] }}</h1>
+          <h1 *ngIf="!patient.alternateIdentifier">Patient {{ patient.patientID }}</h1>
         </div>
 
         <div class="cohort-group">
