add horizontal scroll to mat tables

--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -486,3 +486,8 @@ button.stepper-button {
   // background: #f9eae991;
   // padding: 3px 10px;
 }
+
+.preview-sample {
+  overflow-x: auto;
+  width: 100%;
+}
