--- a/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
+++ b/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
@@ -39,7 +39,7 @@
 </div>
 
 <!-- TEMPORARY: JUST FOR ME WHILE TESTING -->
-  <div style="margin-top: 25px;" *ngIf="user.name === 'Laura Hughes'">
+  <div style="margin-top: 25px;" *ngIf="user.email === 'laura.d.hughes@gmail.com'">
 <button type="button" mat-raised-button color="warn" (click)="deletePatients()">DON'T PRESS THIS BUTTON -- clears patient list</button>
 </div>
 
