Migrate sample-upload to stepper

--- a/sample-viewer/src/app/add-samples/add-samples.component.html
+++ b/sample-viewer/src/app/add-samples/add-samples.component.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 <div class="page-header">
-  <h1>Add Samples</h1>
+  <h1>Upload Samples</h1>
 
   <a href="https://www.dropbox.com/s/1qs8w0qqecgdvpw/sample-patient_template_forlaura.xlsx?dl=0" rel="noreferrer" target="_blank">
       <button mat-button mat-stroked-button class="template-link">download template</button>
@@ -8,8 +8,4 @@
 </div>
 
 <!-- Upload stepper -->
-<!-- <app-upload-stepper></app-upload-stepper> -->
-
-<div class="upload-file">
-  <app-sample-upload></app-sample-upload>
-</div>
+<app-upload-stepper></app-upload-stepper>
