--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
@@ -1,19 +1,17 @@
-<!-- <div class="upload-button"> -->
-  <div class="upload-button" *ngIf="user.write">
-  <!-- Dummy for styling -->
-  <button type="button" mat-raised-button color="primary" (click)="fileInput.click()">Upload sample list</button>
-  <!-- Actual workhorse to upload the data on the client side -->
-  <input hidden class="d-none" type="file" #fileInput (change)="fileChange($event)" placeholder="Upload file" accept=".csv,.xlsx,.xls,.json" id="file_uploader">
+<h2><span class="stepper-title">Select file and read data</span></h2>
 
+<div class="container-column">
+  <!-- <div *ngIf="user.write"> -->
+  <p>
+    Sample lists should be uploaded as either a .csv or a .json.
+  </p>
 
-  <!-- TEMPORARY: JUST FOR ME WHILE TESTING -->
-  <div style="margin-top: 25px;">
-    <button type="button" mat-raised-button color="warn" (click)="deleteSamples()">DON'T PRESS THIS BUTTON -- clears sample list</button>
+  <div class="file-info" *ngIf="fileName">
+    selected file: <span class="file-name">{{ fileName }}</span>
   </div>
 
+  <div class="client-responses">
 
-
-  <!-- <div class="client-responses">
     <h1 *ngIf="uploadResponse">{{ uploadResponse }}</h1>
 
     <h3 *ngIf="errorMsg">{{ errorMsg }}</h3>
@@ -22,17 +20,19 @@
       <div class="error-message-group" *ngFor="let msg of errorObj">
         <div class="error-message">
           <span class="error-label">
-        Error:
-      </span> {{ msg. key }}
+            Error:
+          </span>
+
+          {{ msg. key }}
         </div>
         <div class="error-ids">
           <span class="error-label">
-        IDs:
-      </span>
+            IDs:
+          </span>
+
           <div *ngFor="let id of msg.value.ids; let index">
             {{ id }}
-            <span *ngIf="index < msg.value.ids.length" class="id-separator">
-      </span>
+            <span *ngIf="index < msg.value.ids.length" class="id-separator"></span>
           </div>
 
         </div>
@@ -41,14 +41,20 @@
 
   </div>
 
-  <app-frontend-sample-validation [dataLength]="dataLength" [badIDs]="badIDs" [missingReq]="missingReq" [dateCheck]="dateDict"></app-frontend-sample-validation> -->
+  <div class="upload-button">
+    <!-- Dummy for styling -->
+    <button type="button" mat-raised-button color="primary" (click)="fileInput.click()">Upload sample list</button>
+    <!-- Actual workhorse to upload the data on the client side -->
+    <input hidden class="d-none" type="file" #fileInput (change)="fileChange($event)" placeholder="Upload file" accept=".csv,.xlsx,.xls,.json" id="file_uploader">
+  </div>
 
-  <!-- <app-preview-samples [data]="previewData" *ngIf="previewData"></app-preview-samples> -->
-
+  <!-- TEMPORARY: JUST FOR ME WHILE TESTING -->
+  <div style="margin-top: 25px;" *ngIf="user.email === 'laura.d.hughes@gmail.com'">
+    <button type="button" mat-raised-button color="warn" (click)="deleteSamples()">DON'T PRESS THIS BUTTON -- clears sample list</button>
+  </div>
 
 </div>
 
-<!-- <app-upload-differences></app-upload-differences> -->
 
 <div *ngIf="! user.write">
   <p>
